--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                 <p><img src="img/sec3.jpg" alt="a random picture" class="pull-left"/>
                     Single-origin coffee kitsch Echo Park, shabby chic mlkshk seitan Thundercats drinking vinegar salvia.
-                    Sriracha wayfarers PBR, 90's viral blog aesthetic.  Distillery Blue Bottle trust fund, sriracha
+                    Sriracha wayfarers PBR, <a href="http://ischool.uw.edu">90's viral blog </a>aesthetic.  Distillery Blue Bottle trust fund, sriracha
                     deep v food truck freegan tilde Pinterest Vice American Apparel artisan heirloom.  Flexitarian swag
                     lo-fi viral, mustache 90's before they sold out.  Dreamcatcher locavore biodiesel street art jean
                     shorts.  Before they sold out tattooed Wes Anderson, flannel bespoke freegan drinking vinegar.
@@ -153,7 +153,7 @@
                 <p>Wolf Godard Austin cardigan.  Selvage mlkshk messenger bag salvia, +1 90's shabby chic cliche
                     Echo Park semiotics Schlitz fanny pack iPhone direct trade.  Asymmetrical keytar hashtag banh mi
                     letterpress Odd Future.  Freegan skateboard tousled actually, blog Etsy squid roof party Vice
-                    drinking vinegar tattooed ugh Kickstarter.  Godard irony deep v Banksy.  Pork belly chillwave
+                    drinking vinegar <a href="http://kickstarter.com">tattooed ugh Kickstarter</a>.  Godard irony deep v Banksy.  Pork belly chillwave
                     cliche art party Pinterest, vinyl kitsch PBR&B keffiyeh food truck.  Twee XOXO art party craft
                     beer street art before they sold out tousled umami single-origin coffee fingerstache, stumptown
                     shabby chic.</p>
@@ -196,7 +196,8 @@
             </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
 
-
+        <script src="js/jquery-2.1.1.js"></script>
+        <script src="js/bootstrap.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
